# cyrus-soccer-simulation-team

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  auto.sh  bhv_basic_move.cpp  bhv_basic_move.h  bhv_basic_offensive_kick.cpp  bhv_focus_decision.cpp  bhv_focus_decision.h  coach.conf  debugs.h  denoise-model.txt  focus_move_to_point.cpp  focus_move_to_point.h  focus_reset.cpp  focus_reset.h  github.sh  main_coach.cpp  player.conf  sample_coach.cpp  sample_coach.h  sample_communication.cpp  sample_field_evaluator.cpp  sample_player.cpp  sample_player.h  setting.cpp  setting.h  start.sh.in  strategy.cpp  strategy.h
src/basic_actions/: body_go_to_point.cpp  body_go_to_point.h  body_intercept2009.cpp  body_intercept2009.h  body_intercept_plan.cpp  body_turn_to_tackle.cpp
src/chain_action/: action_chain_graph.cpp  bhv_chain_action.cpp  bhv_normal_dribble.cpp  bhv_normal_dribble.h  bhv_pass_kick_find_receiver.cpp  bhv_strict_check_shoot.cpp  body_force_shoot.cpp  cross_generator.cpp  field_analyzer.cpp  field_analyzer.h  neck_turn_to_receiver.cpp  self_pass_generator.cpp  shoot_generator.cpp  short_dribble_generator.cpp  short_dribble_generator.h  strict_check_pass_generator.cpp
src/chain_action/.deps/: cyrus_player-actgen_direct_pass.Po  cyrus_player-actgen_self_pass.Po  cyrus_player-actgen_shoot.Po  cyrus_player-actgen_short_dribble.Po  cyrus_player-actgen_strict_check_pass.Po  cyrus_player-action_chain_holder.Po  cyrus_player-bhv_chain_action.Po  cyrus_player-bhv_normal_dribble.Po  cyrus_player-bhv_pass_kick_find_receiver.Po  cyrus_player-clear_ball.Po  cyrus_player-clear_generator.Po  cyrus_player-cross_generator.Po  cyrus_player-hold_ball.Po  cyrus_player-pass.Po  cyrus_player-predict_state.Po  cyrus_player-self_pass_generator.Po  cyrus_player-shoot.Po  cyrus_player-shoot_generator.Po  cyrus_player-short_dribble_generator.Po  cyrus_player-strict_check_pass_generator.Po
src/data/settings/: Other.json  alice.json  fra.json  hel.json  oxsy.json  teams.conf  yush.json
src/data_extractor/: offensive_data_extractor.cpp
src/data_extractor/.deps/: cyrus_player-DEState.Po
src/data_extractor/KickPredictor/: KickDataGenerator.cpp  KickDataGenerator.h
src/denoising/: denoising.cpp  denoising.h  localization_denoiser.cpp  localization_denoiser.h  localization_denoiser_by_action.cpp  localization_denoiser_by_action.h  localization_denoiser_by_area.cpp  localization_denoiser_by_area.h  localization_denoiser_by_dnn.cpp  localization_denoiser_by_dnn.h
src/formations-dt/: F433_defense-formation_no56.conf  F433_kickin-our-formation.conf  F433_offense-formation.conf  F433_offense-formation_for_yush.conf  F523-before-kick-off.conf  F523-defense.conf  F523-goal-block.conf  F523-goal-kick-opp.conf  F523-goal-kick-our.conf  F523-kickin-our.conf  F523-offense-wallbreak.conf  F523-offense.conf  F523-setplay-opp.conf  F523-setplay-our.conf  fix.py
src/formations-dt/hel2023/: F523-goal-block.conf  F523-goal-kick-opp.conf  F523-kickin-our.conf  F523-offense-wallbreak.conf  F523-offense.conf
src/goalie/: bhv_goalie_basic_move.cpp  bhv_goalie_chase_ball.cpp
src/goalie/.deps/: cyrus_player-bhv_goalie_chase_ball.Po  cyrus_player-bhv_goalie_free_kick.Po  cyrus_player-neck_goalie_turn_neck.Po
src/lib/: cyrus_audio_memory.h  cyrus_say_message_builder.cpp  cyrus_say_message_builder.h  cyrus_say_message_parser.cpp  cyrus_say_message_parser.h
src/move_def/: basic_defensive_move.cpp  basic_defensive_move.h  bhv_basic_tackle.cpp  bhv_block.cpp  bhv_block.h  bhv_defensive_move.cpp  bhv_defensive_move.h  bhv_mark_decision_greedy.cpp  bhv_mark_decisions.cpp  bhv_mark_execute.cpp  bhv_mark_execute.h  bhv_mark_intention.h  bhv_tackle_intercept.h  cyrus_interceptable.cpp  mark_position_finder.cpp  mark_position_finder.h
src/move_def/.deps/: cyrus_player-best_match_finder.Po  cyrus_player-bhv_basic_tackle.Po  cyrus_player-bhv_block.Po  cyrus_player-bhv_mark_execute.Po  cyrus_player-cyrus_interceptable.Po  cyrus_player-mark_position_finder.Po
src/move_off/: bhv_offensive_move.cpp  bhv_scape.cpp  bhv_scape_voronoi.cpp  bhv_unmark.cpp  bhv_unmark2019.cpp  bhv_unmark_voronoi.h
src/move_off/.deps/: cyrus_player-bhv_offensive_move.Po  cyrus_player-bhv_unmark.Po
src/neck/: next_pass_predictor.cpp  view_tactical.cpp
src/neck/.deps/: cyrus_player-neck_decision.Po  cyrus_player-neck_offensive_intercept_neck.Po
src/obsolute/: move_functions.h
src/roles/: role_goalie.cpp  role_player.cpp
src/roles/.deps/: cyrus_player-role_player.Po
src/setplay/: bhv_penalty_kick.cpp  bhv_set_play.cpp  bhv_set_play.h  bhv_set_play_free_kick.cpp  bhv_set_play_goal_kick.cpp  bhv_set_play_kick_in.cpp
src/setplay/.deps/: cyrus_player-bhv_custom_before_kick_off.Po  cyrus_player-bhv_go_to_static_ball.Po  cyrus_player-bhv_penalty_kick.Po  cyrus_player-bhv_set_play_free_kick.Po  cyrus_player-bhv_set_play_goal_kick.Po
src/setplay/rl_penalty/: ONNX_model.cpp  ONNX_model.h  bhv_rl_kick.cpp  bhv_rl_kick.h
src/vertices/: v-0  v-1  v-10  v-2  v-3  v-4  v-5  v-6  v-7  v-8  v-9
team/src/: Makefile.am  auto.sh  bhv_basic_move.cpp  bhv_basic_move.h  bhv_basic_offensive_kick.cpp  calculate_offensive_opponents.cpp  calculate_offensive_opponents.h  debugs.h  intention_receive.cpp  intention_receive.h  player.conf  sample_coach.cpp  sample_communication.cpp  sample_player.cpp  sample_trainer.cpp  setting.cpp  setting.h  strategy.cpp  team_logo.xpm  train.sh.in
team/src/chain_action/: DataExtractor.cpp  DataExtractor.h  action_chain_graph.cpp  action_chain_graph.h  action_chain_holder.cpp  bhv_chain_action.cpp  bhv_normal_dribble.cpp  bhv_normal_dribble.h  bhv_pass_kick_find_receiver.cpp  bhv_pass_kick_find_receiver.h  bhv_strict_check_shoot.cpp  bhv_strict_check_shoot.h  body_force_shoot.cpp  cooperative_action.cpp  cooperative_action.h  dribble.cpp  dribble.h  field_analyzer.cpp  field_analyzer.h  field_evaluator.h  neck_turn_to_receiver.cpp  predict_state.h  shoot_generator.cpp  short_dribble_generator.cpp  short_dribble_generator.h  strict_check_pass_generator.cpp  strict_check_pass_generator.h  (+1 more)
(+312 files in other folders)
