## Process this file with automake to produce Makefile.in

PLAYERMOVEOFF = \
	move_off/bhv_offensive_move.cpp \
	move_off/bhv_unmark.cpp \
	move_off/bhv_unmark2019.cpp \
	move_off/bhv_scape.cpp 

PLAYERMOVEOFFH = \
	move_off/bhv_offensive_move.h \
	move_off/bhv_unmark.h \
	move_off/bhv_unmark2019.h \
	move_off/bhv_scape.h \
	move_off/bhv_unmark_voronoi.h \
	move_off/bhv_scape_voronoi.h 

SETPLAY = \
	setplay/bhv_set_play.cpp \
	setplay/bhv_set_play_free_kick.cpp \
	setplay/bhv_set_play_goal_kick.cpp \
	setplay/bhv_set_play_indirect_free_kick.cpp \
	setplay/bhv_set_play_kick_in.cpp \
	setplay/bhv_set_play_kick_off.cpp \
	setplay/bhv_prepare_set_play_kick.cpp \
	setplay/intention_wait_after_set_play_kick.cpp \
	setplay/bhv_their_goal_kick_move.cpp \
	setplay/bhv_go_to_static_ball.cpp \
	setplay/bhv_penalty_kick.cpp \
	setplay/bhv_custom_before_kick_off.cpp 

SETPLAYH = \
	setplay/bhv_set_play.h \
	setplay/bhv_set_play_free_kick.h \
	setplay/bhv_set_play_goal_kick.h \
	setplay/bhv_set_play_indirect_free_kick.h \
	setplay/bhv_set_play_kick_in.h \
	setplay/bhv_set_play_kick_off.h \
	setplay/bhv_prepare_set_play_kick.h \
	setplay/intention_wait_after_set_play_kick.h \
	setplay/bhv_their_goal_kick_move.h \
	setplay/bhv_go_to_static_ball.h \
	setplay/bhv_penalty_kick.h \
	setplay/bhv_custom_before_kick_off.h 

MOVEDEF = \
	move_def/bhv_mark_decision_greedy.cpp \
	move_def/bhv_mark_execute.cpp \
	move_def/bhv_block.cpp \
	move_def/bhv_basic_tackle.cpp \
	move_def/cyrus_interceptable.cpp \
	move_def/mark_position_finder.cpp \
	move_def/bhv_mark_decisions.cpp \
	move_def/best_match_finder.cpp

MOVEDEFH = \
	move_def/bhv_mark_decision_greedy.h \
	move_def/bhv_mark_execute.h \
	move_def/bhv_block.h \
	move_def/bhv_basic_tackle.h \
	move_def/bhv_tackle_intercept.h \
	move_def/cyrus_interceptable.h \
	move_def/mark_position_finder.h \
	move_def/best_match_finder.h

GOALIE = \
	goalie/bhv_goalie_basic_move.cpp \
	goalie/bhv_goalie_chase_ball.cpp \
	goalie/bhv_goalie_free_kick.cpp \
	goalie/neck_goalie_turn_neck.cpp

GOALIEH = \
	goalie/bhv_goalie_basic_move.h \
	goalie/bhv_goalie_chase_ball.h \
	goalie/bhv_goalie_free_kick.h \
	goalie/neck_goalie_turn_neck.h 

ROLES = \
	roles/soccer_role.cpp \
	roles/role_player.cpp \
	roles/role_goalie.cpp \
	roles/role_sample.cpp 
ROLESH = \
	roles/soccer_role.h \
	roles/role_player.h \
	roles/role_goalie.h \
	roles/role_sample.h 

NECK = \
	neck/neck_default_intercept_neck.cpp \
	neck/neck_offensive_intercept_neck.cpp \
	neck/view_tactical.cpp
NECKH = \
	neck/neck_default_intercept_neck.h \
	neck/neck_offensive_intercept_neck.h \
	neck/view_tactical.h

PLAYERSOURCES = \
	bhv_basic_move.cpp \
	bhv_basic_offensive_kick.cpp \
	intention_receive.cpp \
	sample_communication.cpp \
	sample_field_evaluator.cpp \
	sample_player.cpp \
	strategy.cpp \
	setting.cpp \
        main_player.cpp

PLAYERHEADERS = \
	bhv_basic_move.h \
	bhv_basic_offensive_kick.h \
	intention_receive.h \
	communication.h \
	sample_communication.h \
	sample_field_evaluator.h \
	sample_player.h \
	setting.h \
    strategy.h \
    debugs.h

CHAINACTIONSOURCES = \
	chain_action/actgen_action_chain_length_filter.h \
	chain_action/actgen_cross.cpp \
	chain_action/actgen_cross.h \
	chain_action/actgen_direct_pass.cpp \
	chain_action/actgen_direct_pass.h \
	chain_action/actgen_self_pass.cpp \
	chain_action/actgen_self_pass.h \
	chain_action/actgen_shoot.cpp \
	chain_action/actgen_shoot.h \
	chain_action/actgen_short_dribble.cpp \
	chain_action/actgen_short_dribble.h \
	chain_action/actgen_simple_dribble.cpp \
	chain_action/actgen_simple_dribble.h \
	chain_action/actgen_strict_check_pass.cpp \
	chain_action/actgen_strict_check_pass.h \
	chain_action/action_chain_graph.cpp \
	chain_action/action_chain_graph.h \
	chain_action/action_chain_holder.cpp \
	chain_action/action_chain_holder.h \
	chain_action/action_generator.h \
	chain_action/action_state_pair.h \
	chain_action/bhv_chain_action.cpp \
	chain_action/bhv_chain_action.h \
	chain_action/bhv_normal_dribble.cpp \
	chain_action/bhv_normal_dribble.h \
	chain_action/bhv_pass_kick_find_receiver.cpp \
	chain_action/bhv_pass_kick_find_receiver.h \
	chain_action/bhv_strict_check_shoot.cpp \
	chain_action/bhv_strict_check_shoot.h \
	chain_action/body_force_shoot.cpp \
	chain_action/body_force_shoot.h \
	chain_action/clear_ball.cpp \
	chain_action/clear_ball.h \
	chain_action/clear_generator.cpp \
	chain_action/clear_generator.h \
	chain_action/cooperative_action.cpp \
	chain_action/cooperative_action.h \
	chain_action/cross_generator.cpp \
	chain_action/cross_generator.h \
	chain_action/dribble.cpp \
	chain_action/dribble.h \
	chain_action/field_analyzer.cpp \
	chain_action/field_analyzer.h \
	chain_action/field_evaluator.h \
	chain_action/hold_ball.cpp \
	chain_action/hold_ball.h \
	chain_action/neck_turn_to_receiver.cpp \
	chain_action/neck_turn_to_receiver.h \
	chain_action/pass.cpp \
	chain_action/pass.h \
	chain_action/pass_checker.h \
	chain_action/predict_ball_object.h \
	chain_action/predict_player_object.h \
	chain_action/predict_state.cpp \
	chain_action/predict_state.h \
	chain_action/self_pass_generator.cpp \
	chain_action/self_pass_generator.h \
	chain_action/shoot.cpp \
	chain_action/shoot.h \
	chain_action/shoot_generator.cpp \
	chain_action/shoot_generator.h \
	chain_action/short_dribble_generator.cpp \
	chain_action/short_dribble_generator.h \
	chain_action/simple_pass_checker.cpp \
	chain_action/simple_pass_checker.h \
	chain_action/strict_check_pass_generator.cpp \
	chain_action/strict_check_pass_generator.h \
	chain_action/tackle_generator.cpp \
	chain_action/tackle_generator.h

COACHSOURCES = \
	sample_coach.cpp \
	main_coach.cpp

COACHHEADERS = \
	sample_coach.h

TRAINERSOURCES = \
	sample_trainer.cpp \
	main_trainer.cpp

TRAINERHEADERS = \
	sample_trainer.h


noinst_PROGRAMS = cyrus_player cyrus_coach cyrus_trainer

noinst_DATA = \
	start.sh.in \
	train.sh.in \
	coach.conf \
	player.conf \
	team_logo.xpm

cyrus_player_SOURCES = \
	$(CHAINACTIONSOURCES) \
	$(PLAYERSOURCES) \
	$(PLAYERMOVEOFF) \
 	$(SETPLAY) \
	$(MOVEDEF) \
	$(GOALIE) \
	$(NECK) \
	$(ROLES)
cyrus_player_CXXFLAGS = -W -Wall -std=c++11
cyrus_player_LDFLAGS =
cyrus_player_LDADD =

cyrus_coach_SOURCES = \
	$(COACHSOURCES)
cyrus_coach_CXXFLAGS = -W -Wall -std=c++11
cyrus_coach_LDFLAGS =
cyrus_coach_LDADD =

cyrus_trainer_SOURCES = \
	$(TRAINERSOURCES)
cyrus_trainer_CXXFLAGS = -W -Wall -std=c++11
cyrus_trainer_LDFLAGS =
cyrus_trainer_LDADD =

noinst_HEADERS = \
	$(PLAYERHEADERS) \
	$(PLAYERMOVEOFFH) \
	$(COACHHEADERS) \
	$(TRAINERHEADERS) \
 	$(SETPLAYH) \
	$(MOVEDEFH) \
	$(GOALIEH) \
	$(NECKH) \
	$(ROLESH)

AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/move_off  -I$(top_srcdir)/src/chain_action
AM_CFLAGS = -W -Wall -std=c++11
AM_CXXFLAGS = -W -Wall -std=c++11
AM_LDLAGS =

CLEANFILES = core *~

DISTCLEANFILES = start.sh train.sh

EXTRA_DIST = $(noinst_DATA) \
	start-debug.sh \
	start-offline.sh
